--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ body {
 h1 {
   color: white;
   text-align: center;
+	padding-top: 1rem;
 }
 
 p {
@@ -18,11 +19,14 @@ p {
   color: #f2f2f2;
   padding-left: 2rem;
   padding-right: 2rem;
+	padding-top: 2rem;
+	padding-bottom: 4rem;
 }
 
 a {
 	color: black;
     padding-left: 1rem;
+
 }
 
 </style>
