--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ a {
 		<h2>Auto Clicker</h2>
 		<a href="https://github.com/dmffuller/auto_clicker" target="_blank">Git Hub Repository</a>
         <h2>Discord Bot</h2>
-        <a href="" target=_blank>Link to come</a>
+        <a href="https://github.com/dmffuller/discord_bot" target=_blank>Git Hub Repository</a>
         <h2>For Hire Help Tool</h2>
         <a href="" target=_blank>Link to come</a>
 	</section>
