--- a/index.html
+++ b/index.html
@@ -1,50 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<style>
-body {
-  background-color: #4f6378;
-}
-
-h1 {
-  color: white;
-  text-align: center;
-	padding-top: 1rem;
-}
-
-p {
-  font-family: garamond;
-  font-size: 20px;
-  text-align: center;
-  color: #f2f2f2;
-  padding-left: 2rem;
-  padding-right: 2rem;
-	padding-top: 2rem;
-	padding-bottom: 4rem;
-}
-
-a {
-	color: black;
-    padding-left: 1rem;
-
-}
-
-</style>
+  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Adding an Image</title>
 </head>
 <body>
 
 	<section>
 		<h1>About Me</h1>
-		<p>My name is Darren Fuller. I am currently A Quality Specialist who has been learning coding. I currently am learning Python. Look below for some projects that I have been doing</p>
+    <hr>
+		<p>My name is Darren Fuller. I am currently A Quality Specialist who has been learning coding. 
+      I currently am learning Python. Look below for some projects that I have been doing</p>
+    <p>Click any of the images below to be linked to the Github Repository</p>
 	</section>
     
-    <section>
+  <section>
 		<h2>Auto Clicker</h2>
-		<a href="https://github.com/dmffuller/auto_clicker" target="_blank">Git Hub Repository</a>
-        <h2>Discord Bot</h2>
-        <a href="https://github.com/dmffuller/discord_bot" target=_blank>Git Hub Repository</a>
-        <h2>For Hire Help Tool</h2>
-        <a href="" target=_blank>Link to come</a>
+		<a href="https://github.com/dmffuller/auto_clicker" target="_blank">
+      <img src="clicker_img.png" alt="Image of an auto clicker tool", width="500">
+    </a>
+
+    <h2>Discord Bot</h2>
+    <a href="https://github.com/dmffuller/discord_bot" target=_blank>Git Hub Repository</a>
+
+    <h2>For Hire Help Tool</h2>
+    <a href="" target=_blank>Link to come</a>
 	</section>
     
 
